# MCP-Finance-Server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  DOCKER.md  Dockerfile  METHOD_REDESIGN.md  METHOD_SIMPLIFICATION.md  README.md  TEST_COVERAGE.md  TEST_RESULTS.md  avanza_dump.html  avanza_main.js  client.py  debug_avanza_api.py  debug_avanza_filter.py  debug_avanza_matrix_variations.py  debug_avanza_mimic.py  debug_avanza_option_details.py  debug_avanza_search_options.py  debug_counts.py  debug_nasdaq_api.py  docker-compose.yml  exchange_map.json  mcp_server.py  nasdaq_curl_debug.txt  nasdaq_debug.json  pyproject.toml  run_test.sh  search_nordic.html  test_dataloader_security.py  test_integration.py  test_mcp_server.py  test_sse.py  test_yfinance_screener.py
.github/workflows/: ci.yml
core/: connection.py  decorators.py  rate_limiter.py
dataloader/: __init__.py  __main__.py  app.py  database.py  llm.py  models.py  scheduler.py  seed.py
dataloader/data/: manual_events.json
dataloader/frontend/: index.html  package-lock.json  package.json  vite.config.js
dataloader/scripts/: 001_add_enrichment_schema.py  __init__.py  calculate_stock_metrics.py  curate_earnings_events.py  enrich_company_profiles.py  enrichment_template.py  extract_avanza_options.py  extract_ibkr_instruments.py  extract_ibkr_prices.py  extract_nasdaq_options.py  extract_option_metrics.py  extract_yahoo_fundamentals.py  extract_yahoo_prices.py  load_dividends.py  load_earnings.py  load_event_calendar.py  load_fundamentals.py  load_historical_prices.py  load_reference_data.py  (+17 more)
services/: account_service.py  classification_service.py  data_quality_service.py  event_service.py  history_service.py  job_service.py  market_intelligence_service.py  market_service.py  option_screener_service.py  option_service.py  screener_service.py  wheel_service.py  yahoo_service.py
(+22 files in other folders)
