[project]
name = "mcp-finance"
version = "0.1.0"
description = "MCP Server for Finance using Interactive Brokers"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "ib_insync",
    "pandas",
    "yfinance",
    "uvicorn",
    "starlette",
    "sse-starlette",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_finance"]
