[project]
name = "mcp-finance"
version = "0.1.0"
description = "MCP Server for Finance using Interactive Brokers"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "ib_insync",
    "pandas",
    "numpy",
    "yfinance",
    "uvicorn",
    "starlette",
    "sse-starlette",
    "requests",
    "apscheduler",
    "fastapi",
    "sqlalchemy",
    "psycopg2-binary",
    "python-multipart",
]

[project.scripts]
mcp-finance = "mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "black",
    "isort",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "mcp_server.py",
    "core/**",
    "services/**",
    "dataloader/**",
    "exchange_map.json",
]
